[MCJ-1474] feat: 소비자 참여 취소/환불 API 구현
